manifests/manifests/netshoot.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: mntr
spec:
  containers:
    - name: debug
      image: nicolaka/netshoot    # ВСЁ для диагностики: есть ping, netcat, ss, nslookup, tcpdump и т.д.
      command: ["sleep", "3600"]
