manifests/manifests/vanilla-postfix.yml
apiVersion: v1
kind: Pod
metadata:
  name: smtp-test
  namespace: mntr
spec:
  containers:
    - name: smtp
      image: boky/postfix:edge-debian
      ports:
        - containerPort: 25
      volumeMounts:
        - name: maildata
          mountPath: /var/mail    
  volumes:
    - name: postfix-sasl-dir
      emptyDir: {}
    - name: maildata
      persistentVolumeClaim:
        claimName: maildata-pvc
