manifests/manifests/imap-service.yml
apiVersion: v1
kind: Service
metadata:
  name: imap
spec:
  ports:
    - port: 143
      targetPort: 143
  selector:
    app: imap
