manifests/manifests/kube-state-metrics-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  labels:
    app: kube-state-metrics
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http-metrics   
  selector:
    app: kube-state-metrics
  clusterIP: None
