manifests/manifests/loki-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: mntr
spec:
  ports:
    - port: 3100
      name: http
      targetPort: 3100
  selector:
    app: loki

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: mntr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:2.9.3
          args:
            - "-config.file=/etc/loki/local-config.yaml"
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: loki-config
              mountPath: /etc/loki/
            - name: loki-data
              mountPath: /data
            - name: loki-wal
              mountPath: /wal
      volumes:
        - name: loki-config
          configMap:
            name: loki-config
        - name: loki-data
          emptyDir: {}
        - name: loki-wal
          emptyDir: {}
