manifests/manifests/smtp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: smtp
  namespace: mntr
spec:
  selector:
    app: smtp         
  ports:
    - protocol: TCP
      port: 2525      
      targetPort: 25
